force-app/main/default/objects/Activity/fields/Appointment_Location__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Location__c</fullName>
    <description>Test</description>
    <label>Appointment Location</label>
    <length>95</length>
    <type>Text</type>
</CustomField>