force-app/main/default/objects/Activity/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <description>Test</description>
    <label>Test</label>
    <length>250</length>
    <type>Text</type>
</CustomField>