force-app/main/default/objects/Activity/fields/Test_for_case__c.field-meta.xml
<CustomField>
    <fullName>Test_for_case__c</fullName>
    <label>Test for case 00071200?</label>
    <length>95</length>
    <type>Text</type>
</CustomField>